Introduce i.mx8qxp support
Signed-off-by: Stoica Cosmin-Stefan <cosmin.stoica@nxp.com>

--- a/kernel/Kbuild
+++ b/kernel/Kbuild
@@ -1,3 +1,4 @@
-EXTRA_CFLAGS = -Wall -g
+EXTRA_CFLAGS += -Wall -g -D$(SOC)
 
-obj-m = m4ctrl_dev.o
+ccflags-y += -I$(PWD)/../include/platform
+obj-m := m4ctrl_dev.o
