m4ctrl: Add reset function
Signed-off-by: Stoica Cosmin-Stefan <cosmin.stoica@nxp.com>

--- a/user/Makefile
+++ b/user/Makefile
@@ -26,5 +26,5 @@ $(TARGET): $(OBJECTS)
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 clean:
-	find . -name *.o | xargs rm -f
+	find . -name "*.o" -delete
 	-rm -f *~ m4ctrl
