--- a/user/Makefile
+++ b/user/Makefile
@@ -1,3 +1,11 @@
+#
+# Copyright 2017 NXP
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
 SOC ?= IMX8QM
 family := $(shell echo $(SOC) | cut -c1-4)
 LCFLAGS := -Wall -g -D$(SOC)
