Change CC in order to have immediate evaluation
Signed-off-by: Stoica Cosmin-Stefan <cosmin.stoica@nxp.com>

--- a/user/Makefile
+++ b/user/Makefile
@@ -3,7 +3,7 @@ family := $(shell echo $(SOC) | cut -c1-4)
 LCFLAGS := -Wall -g -D$(SOC)
 CCFLAGS := $(CFLAGS) $(LCFLAGS)
 CROSS_COMPILE ?=aarch64-linux-gnu-
-CC ?= $(CROSS_COMPILE)gcc
+CC := $(CROSS_COMPILE)gcc
 INCLUDES := -I../include -I../include/platform
 .PHONY: all clean
 
